--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ public/css/app.css
 data/db
 data/ipfs
 src/contracts/deployed.js
+issuer-services/package-lock.json
+issuer-services/up.json
+issuer-services/config.json
