Add Twitter, Google and GitHub claim issuers

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ public/vendor*.js
 public/css/app.css
 data/db
 data/ipfs
+data/OfficialIdentities.js
+NOTES
 src/contracts/deployed.js
 issuer-services/package-lock.json
 issuer-services/up.json
