--- a/issuer-services/package.json
+++ b/issuer-services/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "oauth": "^0.9.15",
     "superagent": "^3.8.2",
     "ws": "^5.1.1",
     "xhr2": "^0.1.4"
