--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ganache-core": "2.1.0",
     "ipfs": "^0.28.2",
     "ipfs-api": "^20.0.0",
+    "oauth": "^0.9.15",
     "prettier": "^1.11.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
@@ -114,7 +115,8 @@
     },
     "globals": {
       "Web3": true,
-      "web3": true
+      "web3": true,
+      "OfficialIdentities": true
     },
     "env": {
       "browser": true,
