--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "build": "npm run build:js && npm run build:css",
     "lint": "eslint .",
     "prettier": "find ./src -iname '*.js' | xargs ./node_modules/.bin/prettier --write",
-    "clean": "rm -rf data/db"
+    "clean": "rm -rf data/db && rm -rf data/ipfs"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.52",
-    "@babel/preset-react": "^7.0.0-beta.52",
-    "@babel/register": "^7.0.0-beta.52",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-react": "^7.0.0-beta.54",
+    "@babel/register": "^7.0.0-beta.54",
     "ajv": "^6.5.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "body-parser": "^1.18.3",
@@ -32,11 +32,11 @@
     "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "ganache-core": "2.1.4",
-    "ipfs": "^0.29.3",
-    "ipfs-api": "^22.2.2",
+    "ganache-core": "2.1.5",
+    "ipfs": "^0.30.1",
+    "ipfs-api": "^22.2.4",
     "oauth": "^0.9.15",
-    "openzeppelin-solidity": "^1.10.0",
+    "openzeppelin-solidity": "^1.11.0",
     "prettier": "^1.13.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -82,23 +82,24 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.52",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.52",
-    "@babel/plugin-transform-destructuring": "^7.0.0-beta.52",
-    "@babel/plugin-transform-object-assign": "^7.0.0-beta.52",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.52",
-    "@babel/preset-env": "^7.0.0-beta.52",
-    "@babel/runtime": "^7.0.0-beta.52",
-    "babel-eslint": "^8.2.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.54",
+    "@babel/plugin-transform-destructuring": "^7.0.0-beta.54",
+    "@babel/plugin-transform-object-assign": "^7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.0.0-beta.54",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.0",
     "clean-webpack-plugin": "^0.1.19",
-    "eslint": "^5.0.1",
+    "cli-table": "^0.3.1",
+    "eslint": "^5.1.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
     "opener": "^1.4.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "webpack": "^4.15.1",
+    "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^v3.1.4"
