--- a/package.json
+++ b/package.json
@@ -78,10 +78,12 @@
       "@babel/plugin-transform-runtime",
       "@babel/plugin-transform-destructuring",
       "@babel/plugin-transform-object-assign",
-      "@babel/plugin-proposal-object-rest-spread"
+      "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-proposal-class-properties"
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.54",
     "@babel/plugin-transform-destructuring": "^7.0.0-beta.54",
