--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "clean": "rm -rf data/db && rm -rf data/ipfs"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/preset-react": "^7.0.0-beta.54",
-    "@babel/register": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/preset-react": "^7.0.0-beta.55",
+    "@babel/register": "^7.0.0-beta.55",
     "ajv": "^6.5.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "body-parser": "^1.18.3",
@@ -32,14 +32,14 @@
     "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "ganache-core": "2.1.5",
-    "ipfs": "^0.30.1",
+    "ganache-core": "2.1.6",
+    "ipfs": "^0.31.1",
     "ipfs-api": "^22.2.4",
     "oauth": "^0.9.15",
-    "openzeppelin-solidity": "^1.11.0",
-    "prettier": "^1.13.7",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "openzeppelin-solidity": "^1.12.0-rc.1",
+    "prettier": "^1.14.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-styl": "^0.0.3",
     "redux": "^4.0.0",
@@ -48,7 +48,7 @@
     "serve-static": "^1.13.2",
     "solc": "^0.4.24",
     "superagent": "^3.8.3",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.35"
   },
   "prettier": {
     "semi": false,
@@ -83,28 +83,28 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.54",
-    "@babel/plugin-transform-destructuring": "^7.0.0-beta.54",
-    "@babel/plugin-transform-object-assign": "^7.0.0-beta.54",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/runtime": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.55",
+    "@babel/plugin-transform-destructuring": "^7.0.0-beta.55",
+    "@babel/plugin-transform-object-assign": "^7.0.0-beta.55",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/runtime": "^7.0.0-beta.55",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.0",
     "clean-webpack-plugin": "^0.1.19",
     "cli-table": "^0.3.1",
-    "eslint": "^5.1.0",
+    "eslint": "^5.2.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
     "opener": "^1.4.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^v3.1.4"
+    "webpack-dev-server": "^v3.1.5"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
