--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "clean": "rm -rf data/db && rm -rf data/ipfs"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.55",
-    "@babel/preset-react": "^7.0.0-beta.55",
-    "@babel/register": "^7.0.0-beta.55",
-    "ajv": "^6.5.2",
+    "@babel/core": "^7.0.0-rc.3",
+    "@babel/preset-react": "^7.0.0-rc.3",
+    "@babel/register": "^7.0.0-rc.3",
+    "ajv": "^6.5.3",
     "babel-plugin-module-resolver": "^3.1.1",
     "body-parser": "^1.18.3",
     "bs58": "^4.0.1",
     "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "ganache-core": "2.1.6",
-    "ipfs": "^0.31.1",
-    "ipfs-api": "^22.2.4",
+    "ganache-core": "2.2.1",
+    "ipfs": "^0.31.7",
+    "ipfs-api": "^24.0.1",
     "oauth": "^0.9.15",
-    "openzeppelin-solidity": "^1.12.0-rc.1",
-    "prettier": "^1.14.0",
+    "openzeppelin-solidity": "^1.12.0",
+    "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
@@ -83,27 +83,27 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.55",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.55",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.55",
-    "@babel/plugin-transform-destructuring": "^7.0.0-beta.55",
-    "@babel/plugin-transform-object-assign": "^7.0.0-beta.55",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.55",
-    "@babel/preset-env": "^7.0.0-beta.55",
-    "@babel/runtime": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.3",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-rc.3",
+    "@babel/plugin-transform-destructuring": "^7.0.0-rc.3",
+    "@babel/plugin-transform-object-assign": "^7.0.0-rc.3",
+    "@babel/plugin-transform-runtime": "^7.0.0-rc.3",
+    "@babel/preset-env": "^7.0.0-rc.3",
+    "@babel/runtime": "^7.0.0-rc.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.0",
     "clean-webpack-plugin": "^0.1.19",
     "cli-table": "^0.3.1",
-    "eslint": "^5.2.0",
+    "eslint": "^5.4.0",
     "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-react": "^7.10.0",
-    "opener": "^1.4.3",
+    "eslint-plugin-react": "^7.11.1",
+    "opener": "^1.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "webpack": "^4.16.4",
+    "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-middleware": "^3.2.0",
     "webpack-dev-server": "^v3.1.5"
   },
   "eslintConfig": {
