Arbitration UI updates. Relative finalization times in UI. Add Funds to accepted offer.

--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "build": "npm run build:js && npm run build:css",
     "lint": "eslint .",
     "prettier": "find ./src -iname '*.js' | xargs ./node_modules/.bin/prettier --write",
-    "clean": "rm -rf data/db && rm -rf data/ipfs"
+    "clean": "rm -rf data/db && rm -rf data/ipfs && rm -rf data/geth",
+    "geth": "geth --nodiscover --datadir ./data/geth --maxpeers 0 --dev --rpc --ws --wsorigins=* --rpccorsdomain=* --rpcaddr=0.0.0.0 --wsaddr=0.0.0.0 --rpcvhosts=*"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-rc.3",
-    "@babel/preset-react": "^7.0.0-rc.3",
-    "@babel/register": "^7.0.0-rc.3",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "ajv": "^6.5.3",
     "babel-plugin-module-resolver": "^3.1.1",
     "body-parser": "^1.18.3",
@@ -83,28 +84,28 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.3",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-rc.3",
-    "@babel/plugin-transform-destructuring": "^7.0.0-rc.3",
-    "@babel/plugin-transform-object-assign": "^7.0.0-rc.3",
-    "@babel/plugin-transform-runtime": "^7.0.0-rc.3",
-    "@babel/preset-env": "^7.0.0-rc.3",
-    "@babel/runtime": "^7.0.0-rc.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.0-beta.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-destructuring": "^7.0.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "cli-table": "^0.3.1",
     "eslint": "^5.4.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.11.1",
-    "opener": "^1.5.0",
+    "opener": "^1.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.2.0",
-    "webpack-dev-server": "^v3.1.5"
+    "webpack-dev-server": "^v3.1.7"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
