--- a/package.json
+++ b/package.json
@@ -22,32 +22,32 @@
     "clean": "rm -rf data/db"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/preset-react": "^7.0.0-beta.44",
-    "@babel/register": "^7.0.0-beta.44",
-    "ajv": "^6.4.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "ajv": "^6.5.3",
     "babel-plugin-module-resolver": "^3.1.1",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "bs58": "^4.0.1",
     "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "ganache-core": "2.1.0",
-    "ipfs": "^0.28.2",
-    "ipfs-api": "^20.0.1",
+    "ganache-core": "2.2.1",
+    "ipfs": "^0.31.7",
+    "ipfs-api": "^24.0.1",
     "oauth": "^0.9.15",
-    "prettier": "^1.12.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "prettier": "^1.14.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-styl": "^0.0.3",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "serve-static": "^1.13.2",
-    "solc": "^0.4.22",
-    "superagent": "^3.8.2",
-    "web3": "^1.0.0-beta.34"
+    "solc": "^0.4.24",
+    "superagent": "^3.8.3",
+    "web3": "^1.0.0-beta.36"
   },
   "prettier": {
     "semi": false,
@@ -81,26 +81,26 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.44",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.44",
-    "@babel/plugin-transform-destructuring": "^7.0.0-beta.44",
-    "@babel/plugin-transform-object-assign": "^7.0.0-beta.44",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "@babel/runtime": "^7.0.0-beta.44",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^8.0.0-beta.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-destructuring": "^7.0.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
-    "eslint": "^4.19.1",
-    "eslint-plugin-babel": "^5.0.0",
-    "eslint-plugin-react": "^7.7.0",
-    "opener": "^1.4.3",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-middleware": "^3.1.2",
-    "webpack-dev-server": "^v3.1.3"
+    "eslint": "^5.5.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-react": "^7.11.1",
+    "opener": "^1.5.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.2.0",
+    "webpack-dev-server": "^v3.1.7"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
