--- a/package.json
+++ b/package.json
@@ -84,6 +84,12 @@
           }
         }
       ],
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
       "@babel/plugin-transform-runtime",
       "@babel/plugin-transform-destructuring",
       "@babel/plugin-transform-object-assign",
@@ -93,6 +99,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-destructuring": "^7.0.0",
@@ -100,8 +107,10 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "apollo-cache-persist": "^0.1.1",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "cli-table": "^0.3.1",
     "eslint": "^5.5.0",
@@ -122,7 +131,8 @@
       "sourceType": "module",
       "ecmaFeatures": {
         "jsx": true,
-        "impliedStrict": true
+        "impliedStrict": true,
+        "legacyDecorators": true
       }
     },
     "globals": {
