--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "geth": "geth --nodiscover --datadir ./data/geth --maxpeers 0 --dev --rpc --ws --wsorigins=* --rpccorsdomain=* --rpcaddr=0.0.0.0 --wsaddr=0.0.0.0 --rpcvhosts=*"
   },
   "dependencies": {
-    "@babel/core": "^7.0.1",
+    "@babel/core": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@blueprintjs/core": "^3.6.1",
@@ -45,7 +45,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.1.1",
-    "ipfs": "^0.32.0",
+    "ipfs": "^0.32.1",
     "ipfs-api": "^24.0.1",
     "oauth": "^0.9.15",
     "openzeppelin-solidity": "^1.12.0",
@@ -56,7 +56,7 @@
     "react-styl": "^0.0.3",
     "serve-static": "^1.13.2",
     "solc": "^0.4.25",
-    "superagent": "^3.8.3",
+    "superagent": "^4.0.0-beta.5",
     "web3": "^1.0.0-beta.36"
   },
   "prettier": {
@@ -99,14 +99,15 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-destructuring": "^7.0.0",
     "@babel/plugin-transform-object-assign": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.0.0",
     "apollo-cache-persist": "^0.1.1",
     "babel-eslint": "^9.0.0",
@@ -120,7 +121,7 @@
     "opener": "^1.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "webpack": "^4.19.0",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-dev-server": "^v3.1.8"
