--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:contracts": "BUILD=1 mocha -r @babel/register -t 10000 test",
     "build:js": "webpack --config webpack.prod.js --progress",
     "build:css": "node -r @babel/register -r ./src/pages/App -e \"console.log(require('react-styl').getCss())\" > public/css/app.css",
+    "build:blueprint-css": "cat node_modules/normalize.css/normalize.css node_modules/@blueprintjs/core/lib/css/blueprint.css node_modules/@blueprintjs/table/lib/css/table.css node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css node_modules/@blueprintjs/datetime/lib/css/blueprint-datetime.css > public/css/blueprint.css",
     "build": "npm run build:js && npm run build:css",
     "lint": "eslint .",
     "prettier": "find ./src -iname '*.js' | xargs ./node_modules/.bin/prettier --write",
@@ -44,18 +45,19 @@
     "ganache-core": "2.2.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.1.1",
-    "ipfs": "^0.32.1",
-    "ipfs-api": "^24.0.1",
+    "graphql-tools": "^4.0.0",
+    "ipfs": "^0.32.2",
+    "ipfs-api": "^24.0.2",
     "oauth": "^0.9.15",
     "openzeppelin-solidity": "^1.12.0",
-    "prettier": "^1.14.2",
-    "react": "^16.5.1",
+    "prettier": "^1.14.3",
+    "react": "^16.5.2",
     "react-apollo": "^2.1.11",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.5.2",
     "react-styl": "^0.0.3",
     "serve-static": "^1.13.2",
     "solc": "^0.4.25",
+    "subscriptions-transport-ws": "^0.9.15",
     "superagent": "^4.0.0-beta.5",
     "web3": "^1.0.0-beta.36"
   },
@@ -118,6 +120,7 @@
     "eslint": "^5.6.0",
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-react": "^7.11.1",
+    "normalize.css": "^8.0.0",
     "opener": "^1.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
