--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@blueprintjs/core": "^3.6.1",
     "@blueprintjs/datetime": "^3.2.0",
     "@blueprintjs/table": "^3.1.1",
-    "ajv": "^6.5.3",
+    "ajv": "^6.5.4",
     "apollo-cache-inmemory": "^1.2.10",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
@@ -44,6 +44,7 @@
     "express-session": "^1.15.6",
     "ganache-core": "2.2.1",
     "graphql": "^14.0.2",
+    "graphql-subscriptions": "^1.0.0",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.0",
     "ipfs": "^0.32.2",
@@ -112,7 +113,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.0.0",
     "apollo-cache-persist": "^0.1.1",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-decorators": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -124,10 +125,10 @@
     "opener": "^1.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.3.0",
-    "webpack-dev-server": "^v3.1.8"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^v3.1.9"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
