--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "node -r @babel/register index",
     "build:contracts": "BUILD=1 mocha -r @babel/register -t 10000 test",
     "build:js": "webpack --config webpack.prod.js --progress",
-    "build:css": "node -r @babel/register -r ./src/pages/App -e \"console.log(require('react-styl').getCss())\" > public/css/app.css",
+    "build:css": "node -r @babel/register -r ./scripts/jsdom -r ./src/pages/App -e \"console.log(require('react-styl').getCss())\" > public/css/app.css",
     "build:blueprint-css": "cat node_modules/normalize.css/normalize.css node_modules/@blueprintjs/core/lib/css/blueprint.css node_modules/@blueprintjs/table/lib/css/table.css node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css node_modules/@blueprintjs/datetime/lib/css/blueprint-datetime.css > public/css/blueprint.css",
     "build": "npm run build:js && npm run build:css",
     "lint": "eslint .",
@@ -24,7 +24,7 @@
     "geth": "geth --nodiscover --datadir ./data/geth --maxpeers 0 --dev --rpc --ws --wsorigins=* --rpccorsdomain=* --rpcaddr=0.0.0.0 --wsaddr=0.0.0.0 --rpcvhosts=*"
   },
   "dependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.1.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@blueprintjs/core": "^3.6.1",
@@ -45,15 +45,16 @@
     "ganache-core": "2.2.1",
     "graphql": "^14.0.2",
     "graphql-subscriptions": "^1.0.0",
-    "graphql-tag": "^2.9.2",
+    "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.0",
-    "ipfs": "^0.32.2",
+    "ipfs": "^0.32.3",
     "ipfs-api": "^24.0.2",
+    "jsdom": "^12.1.0",
     "oauth": "^0.9.15",
     "openzeppelin-solidity": "^1.12.0",
     "prettier": "^1.14.3",
     "react": "^16.5.2",
-    "react-apollo": "^2.1.11",
+    "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
     "react-styl": "^0.0.3",
     "serve-static": "^1.13.2",
@@ -103,30 +104,30 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-destructuring": "^7.0.0",
+    "@babel/plugin-transform-destructuring": "^7.1.2",
     "@babel/plugin-transform-object-assign": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
     "apollo-cache-persist": "^0.1.1",
-    "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.0.2",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "babel-plugin-transform-decorators": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "cli-table": "^0.3.1",
-    "eslint": "^5.6.0",
-    "eslint-plugin-babel": "^5.2.0",
+    "eslint": "^5.6.1",
+    "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-react": "^7.11.1",
     "normalize.css": "^8.0.0",
     "opener": "^1.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^v3.1.9"
   },
