--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "start": "node -r @babel/register index",
     "build:contracts": "BUILD=1 mocha -r @babel/register -t 10000 test",
     "build:js": "webpack --config webpack.prod.js --progress",
-    "build:css": "node -r @babel/register -r ./scripts/jsdom -r ./src/pages/App -e \"console.log(require('react-styl').getCss())\" > public/css/app.css",
-    "build:blueprint-css": "cat node_modules/normalize.css/normalize.css node_modules/@blueprintjs/core/lib/css/blueprint.css node_modules/@blueprintjs/table/lib/css/table.css node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css node_modules/@blueprintjs/datetime/lib/css/blueprint-datetime.css > public/css/blueprint.css",
+    "build:css": "NODE_ENV=CSS node -r @babel/register -r ./scripts/jsdom -r ./src/pages/App -e \"console.log(require('react-styl').getCss())\" > public/css/app.css",
+    "build:blueprint-css": "cat node_modules/normalize.css/normalize.css node_modules/@blueprintjs/core/lib/css/blueprint.css node_modules/@blueprintjs/table/lib/css/table.css node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css node_modules/@blueprintjs/datetime/lib/css/blueprint-datetime.css node_modules/graphiql/graphiql.css > public/css/blueprint.css",
     "build": "npm run build:js && npm run build:css",
     "lint": "eslint .",
     "prettier": "find ./src -iname '*.js' | xargs ./node_modules/.bin/prettier --write",
@@ -36,6 +36,7 @@
     "apollo-link": "^1.2.3",
     "apollo-link-schema": "^1.1.1",
     "apollo-link-state": "^0.4.2",
+    "apollo-server": "^2.1.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "body-parser": "^1.18.3",
     "bs58": "^4.0.1",
@@ -43,6 +44,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "ganache-core": "2.2.1",
+    "graphiql": "^0.12.0",
     "graphql": "^14.0.2",
     "graphql-subscriptions": "^1.0.0",
     "graphql-tag": "^2.10.0",
@@ -50,6 +52,7 @@
     "ipfs": "^0.32.3",
     "ipfs-api": "^24.0.2",
     "jsdom": "^12.1.0",
+    "node-fetch": "^2.2.0",
     "oauth": "^0.9.15",
     "openzeppelin-solidity": "^1.12.0",
     "prettier": "^1.14.3",
@@ -114,6 +117,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.1.2",
     "apollo-cache-persist": "^0.1.1",
+    "apollo-link-http": "^1.5.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-decorators": "^6.24.1",
@@ -122,6 +126,7 @@
     "eslint": "^5.6.1",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-react": "^7.11.1",
+    "ignore-loader": "^0.1.2",
     "normalize.css": "^8.0.0",
     "opener": "^1.5.1",
     "react-router": "^4.3.1",
