--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "build:contracts": "BUILD=1 mocha -r @babel/register -t 10000 test",
     "build:js": "webpack --config webpack.prod.js --progress",
     "build:css": "NODE_ENV=CSS node -r @babel/register -r ./scripts/jsdom -r ./src/pages/App -e \"console.log(require('react-styl').getCss())\" > public/css/app.css",
-    "build:blueprint-css": "cat node_modules/normalize.css/normalize.css node_modules/@blueprintjs/core/lib/css/blueprint.css node_modules/@blueprintjs/table/lib/css/table.css node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css node_modules/@blueprintjs/datetime/lib/css/blueprint-datetime.css node_modules/graphiql/graphiql.css > public/css/blueprint.css",
     "build": "npm run build:js && npm run build:css",
     "lint": "eslint .",
     "prettier": "find ./src -iname '*.js' | xargs ./node_modules/.bin/prettier --write",
@@ -123,14 +122,19 @@
     "babel-plugin-transform-decorators": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "cli-table": "^0.3.1",
+    "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "ignore-loader": "^0.1.2",
+    "mini-css-extract-plugin": "^0.4.3",
     "normalize.css": "^8.0.0",
     "opener": "^1.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
