--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules
 .DS_Store
-public/app*.js
-public/vendor*.js
+public/app.*
 public/css/app.css
+public/index.html
 public/fonts
 data/db
 data/ipfs
