--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test:watch": "mocha -r @babel/register -w --watch-extensions sol -t 5000 test",
     "start": "node -r @babel/register index",
     "build:contracts": "BUILD=1 mocha -r @babel/register -t 10000 test",
-    "build:js": "webpack --config webpack.prod.js --progress",
+    "build:js": "NODE_ENV=production webpack --progress",
     "build:css": "NODE_ENV=CSS node -r @babel/register -r ./scripts/jsdom -r ./src/pages/App -e \"console.log(require('react-styl').getCss())\" > public/css/app.css",
-    "build": "npm run build:js && npm run build:css",
+    "build": "npm run build:css && npm run build:js",
     "lint": "eslint .",
     "prettier": "find ./src -iname '*.js' | xargs ./node_modules/.bin/prettier --write",
     "clean": "rm -rf data/db && rm -rf data/ipfs && rm -rf data/geth",
@@ -26,11 +26,11 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@blueprintjs/core": "^3.6.1",
-    "@blueprintjs/datetime": "^3.2.0",
-    "@blueprintjs/table": "^3.1.1",
+    "@blueprintjs/core": "^3.7.0",
+    "@blueprintjs/datetime": "^3.3.0",
+    "@blueprintjs/table": "^3.2.0",
     "ajv": "^6.5.4",
-    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
     "apollo-link-schema": "^1.1.1",
@@ -50,7 +50,7 @@
     "graphql-tools": "^4.0.0",
     "ipfs": "^0.32.3",
     "ipfs-api": "^24.0.2",
-    "jsdom": "^12.1.0",
+    "jsdom": "^12.2.0",
     "node-fetch": "^2.2.0",
     "oauth": "^0.9.15",
     "openzeppelin-solidity": "^1.12.0",
@@ -115,6 +115,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.1.2",
+    "apollo-boost": "^0.1.16",
     "apollo-cache-persist": "^0.1.1",
     "apollo-link-http": "^1.5.5",
     "babel-eslint": "^10.0.1",
@@ -127,14 +128,18 @@
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
-    "mini-css-extract-plugin": "^0.4.3",
+    "lodash-es": "^4.17.11",
+    "mini-css-extract-plugin": "^0.4.4",
     "normalize.css": "^8.0.0",
     "opener": "^1.5.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "style-loader": "^0.23.0",
-    "url-loader": "^1.1.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
