--- a/package.json
+++ b/package.json
@@ -40,16 +40,15 @@
     "body-parser": "^1.18.3",
     "bs58": "^4.0.1",
     "date-fns": "^1.29.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "ganache-core": "2.2.1",
     "graphiql": "^0.12.0",
     "graphql": "^14.0.2",
     "graphql-subscriptions": "^1.0.0",
     "graphql-tag": "^2.10.0",
-    "graphql-tools": "^4.0.0",
-    "ipfs": "^0.32.3",
-    "ipfs-api": "^24.0.2",
+    "graphql-tools": "^4.0.2",
+    "ipfs-api": "^25.0.0",
     "jsdom": "^12.2.0",
     "node-fetch": "^2.2.0",
     "oauth": "^0.9.15",
@@ -86,7 +85,8 @@
             "contracts": "./src/contracts",
             "pages": "./src/pages",
             "reducers": "./src/reducers",
-            "utils": "./src/utils"
+            "utils": "./src/utils",
+            "hoc": "./src/hoc"
           }
         }
       ],
@@ -110,7 +110,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-destructuring": "^7.1.2",
+    "@babel/plugin-transform-destructuring": "^7.1.3",
     "@babel/plugin-transform-object-assign": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
@@ -123,24 +123,30 @@
     "babel-plugin-transform-decorators": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "cli-table": "^0.3.1",
+    "crypto-js": "^3.1.9-1",
+    "crypto-random-string": "^1.0.0",
     "css-loader": "^1.0.0",
-    "eslint": "^5.6.1",
+    "eslint": "^5.7.0",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-react": "^7.11.1",
+    "eth-ecies": "^1.0.3",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
+    "ipfs": "^0.32.3",
     "lodash-es": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.4",
     "normalize.css": "^8.0.0",
     "opener": "^1.5.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "orbit-db": "^0.19.9",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "secp256k1": "^3.5.2",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.20.2",
+    "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^v3.1.9"
